The last edited shape key is being used over the basis key #96135

Closed
opened 2022-03-02 19:53:31 +01:00 by Diogo Valadares Reis dos Santos · 7 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: AMD Radeon RX 5700 XT ATI Technologies Inc. 4.5.14802 Core Profile Context 22.2.1 30.0.14023.7007

Blender Version
Broken: version: 3.1 4ee4b61dd8
Worked: 3.1 1a0a22f95a

Short description of error
If you enter in edit mode with a shape key and then go to object mode, the shape key you was editing will be used in some operations over the basis key.
ex: editing a shape key, then going to object mode and creating a new one will make a copy of the last edited shape key.

Exact steps for others to reproduce the error

  • In a mesh with shape keys, enter in edit mode with any shape key enabled.
  • go back to object mode and create a new shape key
  • check the new shape key. instead of being the same as the basis, it is a copy of the last edited shape key, which really doesn't feel right.

2022-03-02 15-47-35.mp4

Another way the last edited shape key is being used as the basis is when you export the model to fbx.

  • after editing a shape key, export to fbx
    image.png
    here is the same sphere, exported twice, but one of them was exported AFTER entering edit mode with a shape key.

extra note : I really feel like the shape key system has been broken a lot recently, this isn't the only bug I encountered, there is also differences in some of the shapekeys whenever exported to fbx.

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: AMD Radeon RX 5700 XT ATI Technologies Inc. 4.5.14802 Core Profile Context 22.2.1 30.0.14023.7007 **Blender Version** Broken: version: 3.1 4ee4b61dd8d3 Worked: 3.1 1a0a22f95a22 **Short description of error** If you enter in edit mode with a shape key and then go to object mode, the shape key you was editing will be used in some operations over the basis key. ex: editing a shape key, then going to object mode and creating a new one will make a copy of the last edited shape key. **Exact steps for others to reproduce the error** - In a mesh with shape keys, enter in edit mode with any shape key enabled. - go back to object mode and create a new shape key - check the new shape key. instead of being the same as the basis, it is a copy of the last edited shape key, which really doesn't feel right. [2022-03-02 15-47-35.mp4](https://archive.blender.org/developer/F12894686/2022-03-02_15-47-35.mp4) Another way the last edited shape key is being used as the basis is when you export the model to fbx. - after editing a shape key, export to fbx ![image.png](https://archive.blender.org/developer/F12894711/image.png) here is the same sphere, exported twice, but one of them was exported AFTER entering edit mode with a shape key. extra note : I really feel like the shape key system has been broken a lot recently, this isn't the only bug I encountered, there is also differences in some of the shapekeys whenever exported to fbx.

Added subscriber: @Diogo_Valadares

Added subscriber: @Diogo_Valadares
Diogo Valadares Reis dos Santos changed title from Creating a new shape key uses the last edited shape key to The last edited shape key is being used over the basis key 2022-03-02 20:19:26 +01:00

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscribers: @ideasman42, @iss

Added subscribers: @ideasman42, @iss

CC @ideasman42 this is caused by bfdbc78466, is this intentional change?

CC @ideasman42 this is caused by bfdbc78466ac, is this intentional change?

This is a regression since 3.0, setting high priority (investigating now).

This is a regression since 3.0, setting high priority (investigating now).
Campbell Barton self-assigned this 2022-03-03 07:12:17 +01:00

This issue was referenced by d961adb866

This issue was referenced by d961adb866cc2d7a95e4c6a7f06c49e346ec1abe

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 3.1 milestone 2023-02-08 15:52:45 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#96135
No description provided.